[gd_scene load_steps=7 format=3 uid="uid://vtmdw64wat"]

[ext_resource type="Texture2D" uid="uid://6o4oro7fmeh8" path="res://icon.svg" id="1_dvwu7"]
[ext_resource type="Script" path="res://tank_player2.gd" id="1_r4lbq"]
[ext_resource type="Script" path="res://AIController2D.gd" id="4_37l2i"]
[ext_resource type="Script" path="res://addons/godot_rl_agents/sensors/sensors_2d/RaycastSensor2D.gd" id="5_yc53k"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4n8u6"]
friction = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pkc4j"]
radius = 46.25

[node name="TankPlayer" type="RigidBody2D"]
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_4n8u6")
gravity_scale = 0.0
lock_rotation = true
max_contacts_reported = 2
contact_monitor = true
linear_damp = 3.81
script = ExtResource("1_r4lbq")
SPEED = 700.0
amount_of_raycasts = 0
raycast_fov = 360
raycast_dist = 3000.0
use_normal_distribution = false

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0.0156863, 1)
position = Vector2(0, -3.8147e-06)
scale = Vector2(0.703125, 0.734378)
texture = ExtResource("1_dvwu7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pkc4j")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 3000, 0)
width = 4.0

[node name="Timer" type="Timer" parent="Line2D"]
wait_time = 0.2
one_shot = true

[node name="Turret" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Turret"]
position = Vector2(58.75, -0.749996)
scale = Vector2(0.988281, 0.144531)
texture = ExtResource("1_dvwu7")

[node name="shoot_raycast" type="RayCast2D" parent="Turret"]
target_position = Vector2(3000, 0)
collision_mask = 3

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="AIController2D" type="Node2D" parent="."]
script = ExtResource("4_37l2i")

[node name="RaycastSensor2D" type="Node2D" parent="."]
script = ExtResource("5_yc53k")
collision_mask = 3
n_rays = 1.0
ray_length = 3000

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Line2D/Timer" to="." method="_on_timer_timeout"]
